# gotorch

./: LICENSE  README.md
gotorch/: CMakeLists.txt
gotorch/src/: gdlibrary.cpp  gotorch.cpp  gotorch.h
